@@ -1,5 +1,17 @@
 2007-09-25  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-icon-factory.c:
+	Free file_info after last use (fixed valgrind warning)
+	
+        * libnautilus-private/nautilus-file.c:
+	Sometimes we freed an uninitialized pointer
+	
+        * libnautilus-private/nautilus-directory-async.c:
+        * libnautilus-private/nautilus-directory-private.h:
+	Keep all the directory loading info in DirectoryLoadState
+
+2007-09-25  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-directory-async.c:
         * libnautilus-private/nautilus-directory-private.h:
 	Implement deep count using gio
